ranger config stuff and idea vim

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -336,7 +336,8 @@ map }     traverse
 
 map gh cd ~
 map ge cd /etc
-map gu cd /usr
+map gu cd ~/Desktop/Uni
+map gC cd ~/.config/
 map gd cd /dev
 map gl cd -r .
 map gL cd -r %f
