--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec --no-startup-id rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -163,11 +163,11 @@ bindsym $mod+Control+Left exec playerctl --player=spotify previous
 exec ~/bin/layout.sh
 exec compton # screen tearing, nice animations etc
 # background
-exec feh --bg-scale ~/Pictures/Wallpapers/*
+exec ~/.fehbg
 # network manager
 exec --no-startup-id nm-applet
 
-set $bg-color 	         #2f343f
+set $bg-color            #2f343f
 set $inactive-bg-color   #2f343f
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
@@ -199,3 +199,5 @@ bar {
 
 #open software in specific workspaces
 exec --no-startup-id i3-msg 'workspace 1; exec firefox'
+# rebind keys
+exec xmodmap ~/.Xmodmap
