--- a/.config/i3/config
+++ b/.config/i3/config
@@ -155,11 +155,17 @@ bindsym $mod+Control+s exec ~/bin/screenshot.sh
 # lock screen
 bindsym $mod+Shift+x exec betterlockscreen -l dimblur
 # music player
-bindsym $mod+Control+p exec playerctl --player=spotify play-pause
+bindcode 70 exec playerctl --player=spotify play-pause
 # skip song 
-bindsym $mod+Control+Right exec playerctl --player=spotify next
+bindcode 72 exec playerctl --player=spotify next
 # previous song
-bindsym $mod+Control+Left exec playerctl --player=spotify previous
+bindcode 71 exec playerctl --player=spotify previous
+# increase volume
+bindcode 69 exec amixer set 'Master' 1%+
+# decrease volume
+bindcode 68 exec amixer set 'Master' 1%-
+# toggle mute
+bindcode 67 exec amixer -D pulse set 'Master' 1+ toggle
 # for dual monitors, xrandr script
 exec ~/bin/layout.sh
 exec compton # screen tearing, nice animations etc
