--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco 10
+font pango:System San Francisco 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -172,18 +172,18 @@ exec compton # screen tearing, nice animations etc
 # network manager
 exec --no-startup-id nm-applet
 
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
+set $inactive-bg-color   #000000
+set $bg-color            #111111
+set $text-color          #cccccc
+set $inactive-text-color #cccccc
 set $urgent-bg-color     #E53935
 
 # window colors
 #                       border              background         text                 indicator
 client.focused          $bg-color           $bg-color          $text-color          #000000
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #000000
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #000000
-client.urgent $urgent-bg-color $urgent-bg-color $text-color #000000
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color  #000000
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color  #000000
+client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color           #000000
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
