--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,6 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
+default_border pixel 2
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
@@ -180,7 +181,7 @@ set $urgent-bg-color     #E53935
 
 # window colors
 #                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #000000
+client.focused          #580000             #580000             $text-color          #000000
 client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color  #000000
 client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color  #000000
 client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color           #000000
