--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,7 +31,7 @@ font pango:System San Francisco 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal 
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -168,7 +168,7 @@ bindcode 68 exec amixer set 'Master' 1%-
 # toggle mute
 bindcode 67 exec amixer -D pulse set 'Master' 1+ toggle
 # for dual monitors, xrandr script
-exec ~/bin/layout.sh
+# exec ~/bin/layout.sh
 exec compton # screen tearing, nice animations etc
 # network manager
 exec --no-startup-id nm-applet
