--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco 11
+font pango:Fantasque Sans Mono Nerd Font 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -167,9 +167,8 @@ bindcode 69 exec amixer set 'Master' 1%+
 bindcode 68 exec amixer set 'Master' 1%-
 # toggle mute
 bindcode 67 exec amixer -D pulse set 'Master' 1+ toggle
-# for dual monitors, xrandr script
-# exec ~/bin/layout.sh
-exec compton # screen tearing, nice animations etc
+
+exec compton
 # network manager
 exec --no-startup-id nm-applet
 
@@ -191,7 +190,7 @@ client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color       
 bar {
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
         position top
-        font pango:System San Francisco 10
+        font pango:Fantasque Sans Mono Nerd Font 11
        	colors {
 			background $inactive-bg-color
 		    	separator #757575
@@ -205,5 +204,3 @@ bar {
 
 #open software in specific workspaces
 exec --no-startup-id i3-msg 'workspace 1; exec firefox'
-# background
-exec ~/.fehbg
