--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -25,11 +25,11 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=40
 markup=none
 
 [mediaplayer]
-command=songdisplay
+command=~/bin/songdisplay
 interval=1
 # Volume indicator
 #
