--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -37,9 +37,9 @@ interval=1
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=/usr/lib/i3blocks/volume 5 pulse
-#label=VOL
-label=♪
+command=/usr/lib/i3blocks/volume
+label=VOL
+#label=
 instance=Master
 #instance=PCM
 interval=1
@@ -64,9 +64,14 @@ signal=10
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=
-#instance=/mnt/data
+[disk-root]
+command=df -h / | tail -l | awk '{print $4}' | grep '[0-9]'
+label=/:
+interval=30
+
+[disk-home]
+command=df -h ~ | tail -l | awk '{print $4}' | grep '[0-9]'
+label=~:
 interval=30
 
 # Network interface monitoring
