--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -66,7 +66,8 @@ set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
+set preview_images_method urxvt
 
 # Set the preview image method. Supported methods:
 #
@@ -87,7 +88,7 @@ set preview_images false
 # * urxvt-full:
 #   The same as urxvt but utilizing not only the preview pane but the
 #   whole terminal window.
-set preview_images_method w3m
+# set preview_images_method w3m
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
