directory change for Uni bind

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -337,7 +337,7 @@ map }     traverse
 
 map gh cd ~
 map ge cd /etc
-map gu cd ~/Desktop/Uni
+map gu cd ~/Uni
 map gC cd ~/.config/
 map gd cd /dev
 map gl cd -r .
