--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,7 +10,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -153,20 +153,22 @@ bindsym $mod+r mode "resize"
 
 # screenshot to clipboard
 bindsym $mod+Control+s exec ~/bin/screenshot.sh
-# lock screen
-bindsym $mod+Shift+x exec betterlockscreen -l dimblur
 # music player
-bindcode 70 exec playerctl --player=spotify play-pause
+bindcode 198 exec playerctl --player=spotify play-pause
 # skip song 
-bindcode 72 exec playerctl --player=spotify next
+bindcode 246 exec playerctl --player=spotify next
 # previous song
-bindcode 71 exec playerctl --player=spotify previous
+bindcode 235 exec playerctl --player=spotify previous
+# brightness up
+bindcode 233 exec xbacklight -inc 5
+# brightness down
+bindcode 232 exec xbacklight -dec 5
 # increase volume
-bindcode 69 exec amixer set 'Master' 1%+
+bindcode 123 exec amixer set 'Master' 1%+
 # decrease volume
-bindcode 68 exec amixer set 'Master' 1%-
+bindcode 122 exec amixer set 'Master' 1%-
 # toggle mute
-bindcode 67 exec amixer -D pulse set 'Master' 1+ toggle
+bindcode 121 exec amixer -D pulse set 'Master' 1+ toggle
 
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
