--- a/.config/i3/config
+++ b/.config/i3/config
@@ -172,6 +172,7 @@ bindcode 121 exec amixer -D pulse set 'Master' 1+ toggle
 
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 
 exec compton
 # network manager
