--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -157,10 +157,10 @@ interval=1
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
+[keyindicator]
+instance=CAPS
+interval=once
+signal=11
 
 #[keyindicator]
 #instance=NUM
