--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -28,6 +28,11 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=40
 markup=none
 
+[keyindicator]
+instance=CAPS
+interval=once
+signal=11
+
 [mediaplayer]
 command=~/bin/songdisplay
 interval=1
@@ -123,7 +128,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%d %B, %A %H:%M:%S'
 interval=1
 
 
@@ -157,10 +162,6 @@ interval=1
 #
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 # bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-[keyindicator]
-instance=CAPS
-interval=once
-signal=11
 
 #[keyindicator]
 #instance=NUM
