--- a/.config/i3/config
+++ b/.config/i3/config
@@ -160,9 +160,9 @@ bindcode 246 exec playerctl --player=spotify next
 # previous song
 bindcode 235 exec playerctl --player=spotify previous
 # brightness up
-bindcode 233 exec xbacklight -inc 5
+bindcode 233 exec brightness.sh 1 0.05
 # brightness down
-bindcode 232 exec xbacklight -dec 5
+bindcode 232 exec brightness.sh 0 0.05
 # increase volume
 bindcode 123 exec amixer set 'Master' 1%+
 # decrease volume
