--- a/.config/i3/config
+++ b/.config/i3/config
@@ -154,15 +154,15 @@ bindsym $mod+r mode "resize"
 # screenshot to clipboard
 bindsym $mod+Control+s exec ~/bin/screenshot.sh
 # music player
-bindcode 198 exec playerctl --player=spotify play-pause
+bindsym $mod+Control+Down exec playerctl --player=spotify play-pause
 # skip song 
-bindcode 246 exec playerctl --player=spotify next
+bindsym $mod+Control+Right exec playerctl --player=spotify next
 # previous song
-bindcode 235 exec playerctl --player=spotify previous
+bindsym $mod+Control+Left exec playerctl --player=spotify previous
 # brightness up
-bindcode 233 exec brightness.sh 1 0.05
+bindcode 233 exec xbacklight -inc 5
 # brightness down
-bindcode 232 exec brightness.sh 0 0.05
+bindcode 232 exec xbacklight -dec 5
 # increase volume
 bindcode 123 exec amixer set 'Master' 1%+
 # decrease volume
