--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,7 +10,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -154,31 +154,32 @@ bindsym $mod+r mode "resize"
 # screenshot to clipboard
 bindsym $mod+Control+s exec ~/bin/screenshot.sh
 # music player
-bindsym $mod+Control+Down exec playerctl --player=spotify play-pause
+bindsym XF86AudioPlay exec playerctl --player=spotify play-pause
 # skip song 
-bindsym $mod+Control+Right exec playerctl --player=spotify next
+bindsym XF86AudioNext  exec playerctl --player=spotify next
 # previous song
-bindsym $mod+Control+Left exec playerctl --player=spotify previous
+bindsym XF86AudioPrev exec playerctl --player=spotify previous
 # brightness up
 bindcode 233 exec xbacklight -inc 5
 # brightness down
 bindcode 232 exec xbacklight -dec 5
 # increase volume
-bindcode 123 exec amixer set 'Master' 1%+
+bindsym XF86AudioRaiseVolume exec amixer set 'Master' 1%+
 # decrease volume
-bindcode 122 exec amixer set 'Master' 1%-
+bindsym XF86AudioLowerVolume  exec amixer set 'Master' 1%-
 # toggle mute
-bindcode 121 exec amixer -D pulse set 'Master' 1+ toggle
+bindsym XF86AudioMute exec amixer -D pulse set 'Master' 1+ toggle
 
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
+# capslock indicator
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 
 exec compton
 # network manager
 exec --no-startup-id nm-applet
 # monitors and background
-exec layout.sh
+exec /home/juris/bin/layout.sh
 
 set $bg-color            #000000
 set $inactive-bg-color   #111111
