--- a/.config/i3/config
+++ b/.config/i3/config
@@ -38,7 +38,7 @@ bindsym $mod+Shift+q kill
 
 default_border pixel 2
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run
+bindsym $mod+d exec --no-startup-id rofi -show run 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -154,11 +154,11 @@ bindsym $mod+r mode "resize"
 # screenshot to clipboard
 bindsym $mod+Control+s exec ~/bin/screenshot.sh
 # music player
-bindsym XF86AudioPlay exec playerctl --player=spotify play-pause
+bindsym XF86AudioPlay exec mpc toggle
 # skip song 
-bindsym XF86AudioNext  exec playerctl --player=spotify next
+bindsym XF86AudioNext  exec mpc next
 # previous song
-bindsym XF86AudioPrev exec playerctl --player=spotify previous
+bindsym XF86AudioPrev exec mpc prev
 # brightness up
 bindcode 233 exec xbacklight -inc 5
 # brightness down
