simple cal integration with i3bar

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,5 +1,4 @@
-# i3blocks config file
-#
+# i3blocks config file 
 # Please see man i3blocks for a complete reference!
 # The man page is also hosted at http://vivien.github.io/i3blocks
 #
@@ -128,7 +127,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%d %B, %A %H:%M:%S'
+command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 
 
