weather web on click

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -108,7 +108,7 @@ min_width=CPU: 100.00%
 #separator=false
 
 [weather]
-command=/home/juris/bin/weather
+command=/home/juris/bin/weather; [[ -z "${BLOCK_BUTTON}" ]] || firefox https://www.accuweather.com/en/nl/eindhoven/249208/hourly-weather-forecast/249208 &
 interval=30
 
 
