--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -127,7 +127,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
+command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal
 interval=1
 
 
