--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -33,7 +33,7 @@ interval=once
 signal=11
 
 [mediaplayer]
-command=~/bin/songdisplay
+command=~/bin/songdisplay; [[ -z "${BLOCK_BUTTON}" ]] || sonata 
 interval=1
 # Volume indicator
 #
@@ -108,7 +108,7 @@ min_width=CPU: 100.00%
 #separator=false
 
 [weather]
-command=/home/juris/bin/weather; [[ -z "${BLOCK_BUTTON}" ]] || firefox https://www.accuweather.com/en/nl/eindhoven/249208/hourly-weather-forecast/249208 &
+command=/home/juris/bin/weather; [[ -z "${BLOCK_BUTTON}" ]] || firefox https://www.accuweather.com/en/nl/eindhoven/249208/hourly-weather-forecast/249208 
 interval=30
 
 
