--- a/.config/gsimplecal/config
+++ b/.config/gsimplecal/config
@@ -11,8 +11,8 @@ mainwindow_keep_above = 1
 mainwindow_sticky = 0
 mainwindow_skip_taskbar = 1
 mainwindow_resizable = 0
-mainwindow_position = none
-mainwindow_xoffset = 1680 
+mainwindow_position = mouse 
+mainwindow_xoffset = 0 
 mainwindow_yoffset = 20 
 clock_label = UTC
 clock_tz = :UTC
