--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -67,7 +67,7 @@ set vcs_backend_bzr disabled
 
 # Use one of the supported image preview protocols
 set preview_images true
-set preview_images_method urxvt
+set preview_images_method w3m
 
 # Set the preview image method. Supported methods:
 #
