--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -485,6 +485,9 @@ key_bindings:
 
   - { key: Paste,                   action: Paste                            }
   - { key: Copy,                    action: Copy                             }
+  - { key: T,         mods: Control|Shift, action: SpawnNewInstance           }
+  - { key: K,         mods: Control|Shift, action: ScrollLineUp            }
+  - { key: J,         mods: Control|Shift, action: ScrollLineDown            }
   - { key: L,        mods: Control, action: ClearLogNotice                   }
   - { key: L,        mods: Control, chars: "\x0c"                            }
   - { key: Home,     mods: Alt,     chars: "\x1b[1;3H"                       }
