--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,7 +10,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -31,14 +31,15 @@ font pango:Fantasque Sans Mono Nerd Font 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
-default_border pixel 4 
+default_border pixel 3
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run 
+bindsym $mod+d exec --no-startup-id dmenu_run -i 
+bindsym $mod+Shift+d exec dmenu_websearch
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -201,7 +202,7 @@ client.urgent           $urgent-bg-color   $urgent-bg-color   $text-color       
 bar {
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
         position top
-        font pango:Fantasque Sans Mono Nerd Font 13
+        font pango:Fantasque Sans Mono Nerd Font 8 
        	colors {
 			background $inactive-bg-color
 		    	separator #757575
