--- a/.config/i3/config
+++ b/.config/i3/config
@@ -85,6 +85,7 @@ bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+s exec i3-display-swap
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
