--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -33,7 +33,7 @@ interval=once
 signal=11
 
 [mediaplayer]
-command=~/bin/songdisplay; [[ -z "${BLOCK_BUTTON}" ]] || sonata 
+command=~/bin/songdisplay; [[ -z "${BLOCK_BUTTON}" ]] || cantata 
 interval=1
 # Volume indicator
 #
@@ -127,7 +127,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal
+command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 
 
