--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,7 +10,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -190,7 +190,7 @@ set $inactive-bg-color   #111111
 set $text-color          #cccccc
 set $inactive-text-color #cccccc
 set $urgent-bg-color     #E53935
-set $border-color        #DC143C
+set $border-color        #BC9D66
 # window colors
 #                       border              background         text                 indicator
 client.focused          $border-color       $border-color      $text-color          #000000
