--- a/.config/i3/config
+++ b/.config/i3/config
@@ -208,7 +208,7 @@ bar {
 			background $inactive-bg-color
 		    	separator #757575
 			#                  border             background         text
-			focused_workspace  #580000            #580000            $text-color
+			focused_workspace  #846f4a            #846f4a            $text-color
 			inactive_workspace $inactive-bg-color $inactive-bg-color $text-color
 			urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 		}
