--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -165,8 +165,9 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x1f1f1f'
-    foreground: '0xc0b18b'
+    background: '0x000000'
+    foreground: '0xeaeaea'
+
     # Bright and dim foreground colors
     #
     # The dimmed foreground color is calculated automatically if it is not present.
@@ -181,28 +182,28 @@ colors:
   cursor:
     text: '0x000000'
     cursor: '0xC5769D'
-
   # Normal colors
   normal:
-    black:   '0x0f0e0d'
-    red:     '0x845336'
-    green:   '0x57553c'
-    yellow:  '0xa17e3e'
-    blue:    '0x43454f'
-    magenta: '0x604848'
-    cyan:    '0x5c6652'
-    white:   '0xa18b62'
+    black:   '0x000000'
+    red:     '0xd54e53'
+    green:   '0xb9ca4a'
+    yellow:  '0xe6c547'
+    blue:    '0x7aa6da'
+    magenta: '0xc397d8'
+    cyan:    '0x70c0ba'
+    white:   '0x424242'
 
   # Bright colors
   bright:
-    black:   '0x383332'
-    red:     '0x8c4f4a'
-    green:   '0x898471'
-    yellow:  '0xc8b491'
-    blue:    '0x65788f'
-    magenta: '0x755e4a'
-    cyan:    '0x718062'
-    white:   '0xbc9d66'
+    black:   '0x666666'
+    red:     '0xff3334'
+    green:   '0x9ec400'
+    yellow:  '0xe7c547'
+    blue:    '0x7aa6da'
+    magenta: '0xb77ee0'
+    cyan:    '0x54ced6'
+    white: '0xffffff'
+
   # Selection colors
   #
   # Colors which should be used to draw the selection area. If selection 
