--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -33,7 +33,7 @@ interval=once
 signal=11
 
 [mediaplayer]
-command=~/bin/songdisplay; [[ -z "${BLOCK_BUTTON}" ]] || cantata 
+command=~/bin/musiclist; [[ -z "${BLOCK_BUTTON}" ]] || cantata 
 interval=1
 # Volume indicator
 #
@@ -76,6 +76,11 @@ interval=30
 [disk-home]
 command=df -h ~ | tail -l | awk '{print $4}' | grep '[0-9]'
 label=~:
+interval=30
+
+[disk-media]
+command=df -h /home/juris/media/ | tail -l | awk '{print $4}' | grep '[0-9]'
+label=media:
 interval=30
 
 # Network interface monitoring
