--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -120,14 +120,15 @@ interval=30
 # The battery instance defaults to 0.
 [battery]
 #label=BAT
-label=
+#label=
+command=/home/juris/bin/battery
 #instance=1
 interval=30
 
 # Date Time
 #
 [time]
-command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
+command=date '+%d %B, %A %H:%M:%S'; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal
 interval=1
 
 
