add -n flag to upload script

--- a/.config/Dharkael/flameshot.ini
+++ b/.config/Dharkael/flameshot.ini
@@ -8,4 +8,4 @@ drawColor=#333333
 drawThickness=0
 showHelp=false
 uiColor=#4e4e4e
-uploadScript=/home/juris/bin/upload
+uploadScript=/home/juris/bin/upload -n
